Update: main - Diff report completed

--- a/beta/diff_main.html
+++ b/beta/diff_main.html
@@ -174,8 +174,8 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-574578" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{beta/custom_components → ha-core/homeassistant/components}/plugwise/manifest.json</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+3</span>
-          <span class="d2h-lines-deleted">-4</span>
+          <span class="d2h-lines-added">+4</span>
+          <span class="d2h-lines-deleted">-5</span>
       </span>
     </span>
 </li>
@@ -8061,7 +8061,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    CONF_HOMEKIT_EMULATION,  # pw-beta homekit emulation</span>
+            <span class="d2h-code-line-ctn">    CLIMATE_MODE,</span>
         </div>
     </td>
 </tr><tr>
@@ -8071,7 +8071,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    CONTROL_STATE,</span>
+            <span class="d2h-code-line-ctn">    CONF_HOMEKIT_EMULATION,  # pw-beta homekit emulation</span>
         </div>
     </td>
 </tr><tr>
@@ -8081,7 +8081,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    COOLING_PRESENT,</span>
+            <span class="d2h-code-line-ctn">    CONTROL_STATE,</span>
         </div>
     </td>
 </tr><tr>
@@ -8091,7 +8091,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    COOLING_STATE,</span>
+            <span class="d2h-code-line-ctn">    COOLING_PRESENT,</span>
         </div>
     </td>
 </tr><tr>
@@ -8101,7 +8101,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    DEV_CLASS,</span>
+            <span class="d2h-code-line-ctn">    COOLING_STATE,</span>
         </div>
     </td>
 </tr><tr>
@@ -8111,7 +8111,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    DOMAIN,</span>
+            <span class="d2h-code-line-ctn">    DEV_CLASS,</span>
         </div>
     </td>
 </tr><tr>
@@ -8121,7 +8121,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    GATEWAY_ID,</span>
+            <span class="d2h-code-line-ctn">    DOMAIN,</span>
         </div>
     </td>
 </tr><tr>
@@ -8131,7 +8131,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    HEATING_STATE,</span>
+            <span class="d2h-code-line-ctn">    GATEWAY_ID,</span>
         </div>
     </td>
 </tr><tr>
@@ -8141,7 +8141,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    LOCATION,</span>
+            <span class="d2h-code-line-ctn">    HEATING_STATE,</span>
         </div>
     </td>
 </tr><tr>
@@ -8151,7 +8151,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    LOGGER,</span>
+            <span class="d2h-code-line-ctn">    LOCATION,</span>
         </div>
     </td>
 </tr><tr>
@@ -8161,7 +8161,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    LOWER_BOUND,</span>
+            <span class="d2h-code-line-ctn">    LOGGER,</span>
         </div>
     </td>
 </tr><tr>
@@ -8171,7 +8171,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    MASTER_THERMOSTATS,</span>
+            <span class="d2h-code-line-ctn">    LOWER_BOUND,</span>
         </div>
     </td>
 </tr><tr>
@@ -8181,7 +8181,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    MODE,</span>
+            <span class="d2h-code-line-ctn">    MASTER_THERMOSTATS,</span>
         </div>
     </td>
 </tr><tr>
@@ -9671,7 +9671,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            <del>mode</del> <del>:= self</del>.<del>device[MODE]</del></span>
+            <span class="d2h-code-line-ctn">            <del>mode</del> <del>:= self</del>.<del>device[CLIMATE_MODE]</del></span>
         </div>
     </td>
 </tr><tr>
@@ -20317,7 +20317,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">CONTROL_STATE: Final = &quot;control_state&quot;</span>
+            <span class="d2h-code-line-ctn">CLIMATE_MODE: Final = &quot;climate_mode&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -20327,7 +20327,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">COOLING_PRESENT: Final =&quot;cooling_present&quot;</span>
+            <span class="d2h-code-line-ctn">CONTROL_STATE: Final = &quot;control_state&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -20337,7 +20337,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">DEV_CLASS: Final = &quot;dev_class&quot;</span>
+            <span class="d2h-code-line-ctn">COOLING_PRESENT: Final =&quot;cooling_present&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -20347,7 +20347,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">NONE : Final = &quot;None&quot;</span>
+            <span class="d2h-code-line-ctn">DEV_CLASS: Final = &quot;dev_class&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -20357,7 +20357,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">MODE: Final = &quot;mode&quot;</span>
+            <span class="d2h-code-line-ctn">NONE : Final = &quot;None&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -28263,13 +28263,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-del d2h-change">
       10
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==1.5.0&quot;],</span>
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==1.5.<del>1</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -28279,7 +28279,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;version&quot;: &quot;0.54.1&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;version&quot;: &quot;0.54.2&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -28407,13 +28407,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-ins d2h-change">
       10
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==1.5.0&quot;],</span>
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==1.5.<ins>0</ins>&quot;],</span>
         </div>
     </td>
 </tr><tr>
