--- a/beta/diff.html
+++ b/beta/diff.html
@@ -174,8 +174,8 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-513496" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{ha-core/homeassistant/components → beta/custom_components}/plugwise/manifest.json</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+4</span>
-          <span class="d2h-lines-deleted">-3</span>
+          <span class="d2h-lines-added">+5</span>
+          <span class="d2h-lines-deleted">-4</span>
       </span>
     </span>
 </li>
@@ -11180,7 +11180,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    CONF_HOMEKIT_EMULATION,  # pw-beta homekit emulation</span>
+            <span class="d2h-code-line-ctn">    CLIMATE_MODE,</span>
         </div>
     </td>
 </tr><tr>
@@ -11190,7 +11190,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    CONTROL_STATE,</span>
+            <span class="d2h-code-line-ctn">    CONF_HOMEKIT_EMULATION,  # pw-beta homekit emulation</span>
         </div>
     </td>
 </tr><tr>
@@ -11200,7 +11200,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    COOLING_PRESENT,</span>
+            <span class="d2h-code-line-ctn">    CONTROL_STATE,</span>
         </div>
     </td>
 </tr><tr>
@@ -11210,7 +11210,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    COOLING_STATE,</span>
+            <span class="d2h-code-line-ctn">    COOLING_PRESENT,</span>
         </div>
     </td>
 </tr><tr>
@@ -11220,7 +11220,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    DEV_CLASS,</span>
+            <span class="d2h-code-line-ctn">    COOLING_STATE,</span>
         </div>
     </td>
 </tr><tr>
@@ -11230,7 +11230,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    DOMAIN,</span>
+            <span class="d2h-code-line-ctn">    DEV_CLASS,</span>
         </div>
     </td>
 </tr><tr>
@@ -11240,7 +11240,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    GATEWAY_ID,</span>
+            <span class="d2h-code-line-ctn">    DOMAIN,</span>
         </div>
     </td>
 </tr><tr>
@@ -11250,7 +11250,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    HEATING_STATE,</span>
+            <span class="d2h-code-line-ctn">    GATEWAY_ID,</span>
         </div>
     </td>
 </tr><tr>
@@ -11260,7 +11260,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    LOCATION,</span>
+            <span class="d2h-code-line-ctn">    HEATING_STATE,</span>
         </div>
     </td>
 </tr><tr>
@@ -11270,7 +11270,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    LOGGER,</span>
+            <span class="d2h-code-line-ctn">    LOCATION,</span>
         </div>
     </td>
 </tr><tr>
@@ -11280,7 +11280,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    LOWER_BOUND,</span>
+            <span class="d2h-code-line-ctn">    LOGGER,</span>
         </div>
     </td>
 </tr><tr>
@@ -11290,7 +11290,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    MASTER_THERMOSTATS,</span>
+            <span class="d2h-code-line-ctn">    LOWER_BOUND,</span>
         </div>
     </td>
 </tr><tr>
@@ -11300,7 +11300,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    MODE,</span>
+            <span class="d2h-code-line-ctn">    MASTER_THERMOSTATS,</span>
         </div>
     </td>
 </tr><tr>
@@ -12770,7 +12770,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">            <ins>mode</ins> <ins>:= self</ins>.<ins>device[MODE]</ins></span>
+            <span class="d2h-code-line-ctn">            <ins>mode</ins> <ins>:= self</ins>.<ins>device[CLIMATE_MODE]</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -21961,7 +21961,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">CONTROL_STATE: Final = &quot;control_state&quot;</span>
+            <span class="d2h-code-line-ctn">CLIMATE_MODE: Final = &quot;climate_mode&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -21971,7 +21971,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">COOLING_PRESENT: Final =&quot;cooling_present&quot;</span>
+            <span class="d2h-code-line-ctn">CONTROL_STATE: Final = &quot;control_state&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -21981,7 +21981,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">DEV_CLASS: Final = &quot;dev_class&quot;</span>
+            <span class="d2h-code-line-ctn">COOLING_PRESENT: Final =&quot;cooling_present&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -21991,7 +21991,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">NONE : Final = &quot;None&quot;</span>
+            <span class="d2h-code-line-ctn">DEV_CLASS: Final = &quot;dev_class&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -22001,7 +22001,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">MODE: Final = &quot;mode&quot;</span>
+            <span class="d2h-code-line-ctn">NONE : Final = &quot;None&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -27783,13 +27783,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-del d2h-change">
       10
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==1.5.0&quot;],</span>
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==1.5.<del>0</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -27927,13 +27927,13 @@
         </div>
     </td>
 </tr><tr>
-    <td class="d2h-code-side-linenumber d2h-cntx">
+    <td class="d2h-code-side-linenumber d2h-ins d2h-change">
       10
     </td>
-    <td class="d2h-cntx">
+    <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==1.5.0&quot;],</span>
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==1.5.<ins>1</ins>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -27943,7 +27943,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;version&quot;: &quot;0.54.1&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;version&quot;: &quot;0.54.2&quot;,</span>
         </div>
     </td>
 </tr><tr>
