Update: main - Diff report completed

--- a/beta/diff_pw-v1.6.0.html
+++ b/beta/diff_pw-v1.6.0.html
@@ -29804,7 +29804,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;ed&#x2F;32&#x2F;27eeba16daf0f3c3d2fe91ae0ba4d3bf27cdc2ad695d817da5bfd6ceec6c&#x2F;</del>plugwise<del>-</del>1.<del>6</del>.<del>0a1.tar.gz#plugwise==</del>1<del>.6.0a1</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;ed&#x2F;32&#x2F;27eeba16daf0f3c3d2fe91ae0ba4d3bf27cdc2ad695d817da5bfd6ceec6c&#x2F;</del>plugwise<del>-1.6.0a1.tar.gz#plugwise</del>==1.<del>6</del>.<del>0a1</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -29948,7 +29948,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise<ins>==</ins>1.<ins>5</ins>.1&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==1.<ins>5</ins>.<ins>2</ins>&quot;],</span>
         </div>
     </td>
 </tr><tr>
