--- a/beta/index.html
+++ b/beta/index.html
@@ -24,6 +24,8 @@
 
                         <li><a href='diff_pw-v1.6.0.html'>Unified diff core:dev vs beta:origin/pw-v1.6.0</a></li>
 
+                        <li><a href='diff_renovate/astral-sh-ruff-pre-commit-0.x.html'>Unified diff core:dev vs beta:origin/renovate/astral-sh-ruff-pre-commit-0.x</a></li>
+
                         <li><a href='diff_rework_runtime_updating.html'>Unified diff core:dev vs beta:origin/rework_runtime_updating</a></li>
 
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
