Update: debug - Diff report completed

--- a/beta/diff_new_sensor.html
+++ b/beta/diff_new_sensor.html
@@ -24704,7 +24704,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;e1&#x2F;dc&#x2F;a1eb174d6052189a701dc5286f561996e731de23aee746ac5a9f537663d8&#x2F;</del>plugwise<del>-0</del>.<del>33</del>.<del>0a0.tar.gz#plugwise==</del>0<del>.33.0a0</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;e1&#x2F;dc&#x2F;a1eb174d6052189a701dc5286f561996e731de23aee746ac5a9f537663d8&#x2F;</del>plugwise<del>-0.33.0a0.tar.gz#plugwise</del>==<del>0</del>.<del>33</del>.<del>0a0</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -24848,7 +24848,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise<ins>==1</ins>.<ins>6</ins>.0&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==<ins>1</ins>.<ins>6</ins>.<ins>1</ins>&quot;],</span>
         </div>
     </td>
 </tr><tr>
