--- a/beta/diff_select_preset.html
+++ b/beta/diff_select_preset.html
@@ -24904,7 +24904,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==<del>0</del>.<del>35</del>.<del>1</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==<del>0</del>.<del>35</del>.1&quot;],</span>
         </div>
     </td>
 </tr><tr>
@@ -25048,7 +25048,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==<ins>1</ins>.<ins>6</ins>.<ins>0</ins>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;plugwise==<ins>1</ins>.<ins>6</ins>.1&quot;],</span>
         </div>
     </td>
 </tr><tr>
