Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -22,6 +22,8 @@
 
                         <li><a href='diff_pw-1-4-4.html'>Unified diff core:dev vs beta:origin/pw-1-4-4</a></li>
 
+                        <li><a href='diff_pw-v1.6.2.html'>Unified diff core:dev vs beta:origin/pw-v1.6.2</a></li>
+
                         <li><a href='diff_quality.html'>Unified diff core:dev vs beta:origin/quality</a></li>
 
                         <li><a href='diff_renovate/astral-sh-ruff-pre-commit-0.x.html'>Unified diff core:dev vs beta:origin/renovate/astral-sh-ruff-pre-commit-0.x</a></li>
