Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -22,8 +22,6 @@
 
                         <li><a href='diff_pw-1-4-4.html'>Unified diff core:dev vs beta:origin/pw-1-4-4</a></li>
 
-                        <li><a href='diff_pw-v1.6.2.html'>Unified diff core:dev vs beta:origin/pw-v1.6.2</a></li>
-
                         <li><a href='diff_quality.html'>Unified diff core:dev vs beta:origin/quality</a></li>
 
                         <li><a href='diff_renovate/astral-sh-ruff-pre-commit-0.x.html'>Unified diff core:dev vs beta:origin/renovate/astral-sh-ruff-pre-commit-0.x</a></li>
@@ -31,6 +29,10 @@
                         <li><a href='diff_rework_runtime_updating.html'>Unified diff core:dev vs beta:origin/rework_runtime_updating</a></li>
 
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
+
+                        <li><a href='diff_test-coord-2.html'>Unified diff core:dev vs beta:origin/test-coord-2</a></li>
+
+                        <li><a href='diff_test_set_hvac_mode.html'>Unified diff core:dev vs beta:origin/test_set_hvac_mode</a></li>
 
                 </ul>
                 <p>Various PR branch differences against Core (dev/upstreaming)</p>
