Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -18,6 +18,8 @@
 
                         <li><a href='diff_new_sensor.html'>Unified diff core:dev vs beta:origin/new_sensor</a></li>
 
+                        <li><a href='diff_plugwise-v1.6.4.html'>Unified diff core:dev vs beta:origin/plugwise-v1.6.4</a></li>
+
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
                         <li><a href='diff_pw-1-4-4.html'>Unified diff core:dev vs beta:origin/pw-1-4-4</a></li>
@@ -25,6 +27,8 @@
                         <li><a href='diff_quality.html'>Unified diff core:dev vs beta:origin/quality</a></li>
 
                         <li><a href='diff_reconfigure.html'>Unified diff core:dev vs beta:origin/reconfigure</a></li>
+
+                        <li><a href='diff_renovate/astral-sh-ruff-pre-commit-0.x.html'>Unified diff core:dev vs beta:origin/renovate/astral-sh-ruff-pre-commit-0.x</a></li>
 
                         <li><a href='diff_rework_runtime_updating.html'>Unified diff core:dev vs beta:origin/rework_runtime_updating</a></li>
 
