Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -12,13 +12,13 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
+                        <li><a href='diff_config_flow-reconfig.html'>Unified diff core:dev vs beta:origin/config_flow-reconfig</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
 
                         <li><a href='diff_new_sensor.html'>Unified diff core:dev vs beta:origin/new_sensor</a></li>
-
-                        <li><a href='diff_plugwise-v1.6.4.html'>Unified diff core:dev vs beta:origin/plugwise-v1.6.4</a></li>
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
