Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -12,6 +12,8 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
+                        <li><a href='diff_HEAD -> main.html'>Unified diff core:dev vs beta:origin/HEAD -> origin/main</a></li>
+
                         <li><a href='diff_add_weather.html'>Unified diff core:dev vs beta:origin/add_weather</a></li>
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
@@ -25,6 +27,8 @@
                         <li><a href='diff_pw-1-4-4.html'>Unified diff core:dev vs beta:origin/pw-1-4-4</a></li>
 
                         <li><a href='diff_quality.html'>Unified diff core:dev vs beta:origin/quality</a></li>
+
+                        <li><a href='diff_renovate/pycqa-bandit-1.x.html'>Unified diff core:dev vs beta:origin/renovate/pycqa-bandit-1.x</a></li>
 
                         <li><a href='diff_rework_runtime_updating.html'>Unified diff core:dev vs beta:origin/rework_runtime_updating</a></li>
 
