Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -14,6 +14,8 @@
 
                         <li><a href='diff_add_weather.html'>Unified diff core:dev vs beta:origin/add_weather</a></li>
 
+                        <li><a href='diff_bandit-B320.html'>Unified diff core:dev vs beta:origin/bandit-B320</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
@@ -23,6 +25,8 @@
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
                         <li><a href='diff_pw-1-4-4.html'>Unified diff core:dev vs beta:origin/pw-1-4-4</a></li>
+
+                        <li><a href='diff_pw-v1.7.0.html'>Unified diff core:dev vs beta:origin/pw-v1.7.0</a></li>
 
                         <li><a href='diff_quality.html'>Unified diff core:dev vs beta:origin/quality</a></li>
 
