Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -12,6 +12,8 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
+                        <li><a href='diff_HEAD -> main.html'>Unified diff core:dev vs beta:origin/HEAD -> origin/main</a></li>
+
                         <li><a href='diff_add_weather.html'>Unified diff core:dev vs beta:origin/add_weather</a></li>
 
                         <li><a href='diff_bandit-B320.html'>Unified diff core:dev vs beta:origin/bandit-B320</a></li>
