Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -36,11 +36,15 @@
 
                         <li><a href='diff_renovate/codespell-project-codespell-2.x.html'>Unified diff core:dev vs beta:origin/renovate/codespell-project-codespell-2.x</a></li>
 
+                        <li><a href='diff_renovate/igorshubovych-markdownlint-cli-0.x.html'>Unified diff core:dev vs beta:origin/renovate/igorshubovych-markdownlint-cli-0.x</a></li>
+
                         <li><a href='diff_renovate/pycqa-bandit-1.x.html'>Unified diff core:dev vs beta:origin/renovate/pycqa-bandit-1.x</a></li>
 
                         <li><a href='diff_rework_runtime_updating.html'>Unified diff core:dev vs beta:origin/rework_runtime_updating</a></li>
 
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
+
+                        <li><a href='diff_smallfixes.html'>Unified diff core:dev vs beta:origin/smallfixes</a></li>
 
                         <li><a href='diff_test-coord-2.html'>Unified diff core:dev vs beta:origin/test-coord-2</a></li>
 
