--- a/beta/diff_pw-v1.7.0.html
+++ b/beta/diff_pw-v1.7.0.html
@@ -28794,7 +28794,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;17&#x2F;a8&#x2F;389eedd43baaf284bc5f07d37922ec8defae5ed854db639f59290acda5d3&#x2F;</del>plugwise<del>-1.7.0a5.tar.gz#plugwise</del>==1.<del>7</del>.<del>0a5</del>&quot;],</span>
+            <span class="d2h-code-line-ctn">  &quot;requirements&quot;: [&quot;<del>https:&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;76&#x2F;4d&#x2F;e84968f5a8a08edd9f2a688b5905fe8893fbe79c94e3d24175dca140e045&#x2F;</del>plugwise<del>-1.7.0a8.tar.gz#plugwise</del>==1.<del>7</del>.<del>0a8</del>&quot;],</span>
         </div>
     </td>
 </tr><tr>
