--- a/beta/index.html
+++ b/beta/index.html
@@ -30,6 +30,10 @@
 
                         <li><a href='diff_quality.html'>Unified diff core:dev vs beta:origin/quality</a></li>
 
+                        <li><a href='diff_renovate/actions-setup-python-5.x.html'>Unified diff core:dev vs beta:origin/renovate/actions-setup-python-5.x</a></li>
+
+                        <li><a href='diff_renovate/codespell-project-codespell-2.x.html'>Unified diff core:dev vs beta:origin/renovate/codespell-project-codespell-2.x</a></li>
+
                         <li><a href='diff_rework_runtime_updating.html'>Unified diff core:dev vs beta:origin/rework_runtime_updating</a></li>
 
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
