Update: main - Diff report completed

--- a/beta/index.html
+++ b/beta/index.html
@@ -14,6 +14,8 @@
 
                         <li><a href='diff_HEAD -> main.html'>Unified diff core:dev vs beta:origin/HEAD -> origin/main</a></li>
 
+                        <li><a href='diff_actions.html'>Unified diff core:dev vs beta:origin/actions</a></li>
+
                         <li><a href='diff_add_weather.html'>Unified diff core:dev vs beta:origin/add_weather</a></li>
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
