--- a/beta/index.html
+++ b/beta/index.html
@@ -12,9 +12,11 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
-                        <li><a href='diff_HEAD -> main.html'>Unified diff core:dev vs beta:origin/HEAD -> origin/main</a></li>
+                        <li><a href='diff_Fix-833.html'>Unified diff core:dev vs beta:origin/Fix-833</a></li>
 
-                        <li><a href='diff_actions.html'>Unified diff core:dev vs beta:origin/actions</a></li>
+                        <li><a href='diff_HA-138201.html'>Unified diff core:dev vs beta:origin/HA-138201</a></li>
+
+                        <li><a href='diff_HEAD -> main.html'>Unified diff core:dev vs beta:origin/HEAD -> origin/main</a></li>
 
                         <li><a href='diff_add_weather.html'>Unified diff core:dev vs beta:origin/add_weather</a></li>
 
