--- a/beta/diff_pw-v1.7.3.html
+++ b/beta/diff_pw-v1.7.3.html
@@ -175,7 +175,7 @@
       </svg>      <a href="#d2h-574578" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{beta/custom_components → ha-core/homeassistant/components}/plugwise/manifest.json</a>
       <span class="d2h-file-stats">
           <span class="d2h-lines-added">+4</span>
-          <span class="d2h-lines-deleted">-6</span>
+          <span class="d2h-lines-deleted">-5</span>
       </span>
     </span>
 </li>
@@ -27620,7 +27620,7 @@
                     <tr>
     <td class="d2h-code-side-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-side-line">@@ -1,15 +1,13 @@</div>
+        <div class="d2h-code-side-line">@@ -1,14 +1,13 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
@@ -27719,7 +27719,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: <del>[</del></span>
+            <span class="d2h-code-line-ctn">  &quot;<del>requirements</del>&quot;: <del>[</del>&quot;<del>plugwise==1.7.3</del>&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -27729,7 +27729,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><del>    </del>&quot;<del>https</del>:<del>&#x2F;&#x2F;test-files.pythonhosted.org&#x2F;packages&#x2F;48&#x2F;f0&#x2F;1827e260a44ac4b134dc05d1d5a6adbb1406f349c05fdbca9a8af547572b&#x2F;</del>plugwise<del>-1.7.3a0.tar.gz#plugwise</del>==1.7.<del>3a0</del>&quot;</span>
+            <span class="d2h-code-line-ctn">  ],</span>
         </div>
     </td>
 </tr><tr>
@@ -27739,22 +27739,12 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  ],</span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-side-linenumber d2h-del">
-      13
-    </td>
-    <td class="d2h-del">
-        <div class="d2h-code-side-line">
-            <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">  &quot;version&quot;: &quot;0.57.2a0&quot;,</span>
+            <span class="d2h-code-line-ctn">  &quot;version&quot;: &quot;0.57.2a1&quot;,</span>
         </div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      14
+      13
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -27764,7 +27754,7 @@
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
-      15
+      14
     </td>
     <td class="d2h-cntx">
         <div class="d2h-code-side-line">
@@ -27883,7 +27873,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>quality_scale</ins>&quot;: <ins>&quot;platinum&quot;,</ins></span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>quality_scale</ins>&quot;: &quot;<ins>platinum</ins>&quot;<ins>,</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -27893,17 +27883,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><ins>  </ins>&quot;<ins>requirements&quot;</ins>:<ins> [&quot;</ins>plugwise==1.7.<ins>2</ins>&quot;<ins>],</ins></span>
-        </div>
-    </td>
-</tr><tr>
-    <td class="d2h-code-side-linenumber d2h-code-side-emptyplaceholder d2h-cntx d2h-emptyplaceholder">
-      
-    </td>
-    <td class="d2h-cntx d2h-emptyplaceholder">
-        <div class="d2h-code-side-line d2h-code-side-emptyplaceholder">
-            <span class="d2h-code-line-prefix">&nbsp;</span>
-            <span class="d2h-code-line-ctn"><br></span>
+            <span class="d2h-code-line-ctn">  <ins>&quot;requirements&quot;: [&quot;plugwise==1.7.2&quot;</ins>],</span>
         </div>
     </td>
 </tr><tr>
