Update: main - Diff report completed

--- a/beta/diff_new_sensor.html
+++ b/beta/diff_new_sensor.html
@@ -27648,7 +27648,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: <ins>[</ins>&quot;<ins>plugwise==1</ins>.<ins>7</ins>.<ins>2</ins>&quot;<ins>],</ins></span>
+            <span class="d2h-code-line-ctn">  &quot;<ins>requirements</ins>&quot;: <ins>[</ins>&quot;<ins>plugwise==1</ins>.<ins>7</ins>.<ins>3</ins>&quot;<ins>],</ins></span>
         </div>
     </td>
 </tr><tr>
@@ -46190,7 +46190,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">          &quot;off&quot;: &quot;Off&quot;</span>
+            <span class="d2h-code-line-ctn">          &quot;off&quot;: &quot;[%key:common::state::off%]&quot;</span>
         </div>
     </td>
 </tr><tr>
