--- a/beta/diff_select_preset.html
+++ b/beta/diff_select_preset.html
@@ -46835,7 +46835,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">              &quot;away&quot;: &quot;<ins>[%key:component::climate::entity_component::_::state_attributes::preset_mode::state::away%]</ins>&quot;,</span>
+            <span class="d2h-code-line-ctn">              &quot;away&quot;: &quot;<ins>[%key:common::state::not_home%]</ins>&quot;,</span>
         </div>
     </td>
 </tr><tr>
