Update: main - Diff report completed

--- a/beta/diff_pre_0_34_11.html
+++ b/beta/diff_pre_0_34_11.html
@@ -50040,7 +50040,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">          &quot;username&quot;: &quot;Smile Username&quot;</span>
+            <span class="d2h-code-line-ctn">          &quot;username&quot;: &quot;Smile username&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -51100,7 +51100,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">          &quot;full&quot;: &quot;Normal&quot;,</span>
+            <span class="d2h-code-line-ctn">          &quot;full&quot;: &quot;[%key:common::state::normal%]&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -51720,7 +51720,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;Electricity consumed off peak interval&quot;</span>
+            <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;Electricity consumed off-peak interval&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -51810,7 +51810,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;Electricity produced off peak interval&quot;</span>
+            <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;Electricity produced off-peak interval&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -51870,7 +51870,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;Electricity consumed off peak point&quot;</span>
+            <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;Electricity consumed off-peak point&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -51930,7 +51930,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;Electricity consumed off peak cumulative&quot;</span>
+            <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;Electricity consumed off-peak cumulative&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -52020,7 +52020,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;Electricity produced off peak point&quot;</span>
+            <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;Electricity produced off-peak point&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -52080,7 +52080,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;Electricity produced off peak cumulative&quot;</span>
+            <span class="d2h-code-line-ctn">        &quot;name&quot;: &quot;Electricity produced off-peak cumulative&quot;</span>
         </div>
     </td>
 </tr><tr>
